# bagit-desktop

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  com.skilldary.bagit.desktop.json  meson.build
.flatpak-builder/checksums/: x86_64-com.skilldary.bagit.desktop.json
data/: com.skilldary.bagit.desktop.appdata.xml.in  com.skilldary.bagit.desktop.desktop.in  com.skilldary.bagit.desktop.gschema.xml  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  bagit-desktop.pot  en.po  en_GB.po  fr.po  meson.build
src/: action_bar.rs  application.rs  bagit-desktop.gresource.xml  clone_repository_page.rs  config.rs  create_repository_page.rs  main.rs  meson.build  preferences.rs  repositories.rs  repository_page.rs  style.css  window.rs  window.ui
src/classes/: BagitRepository.rs
src/gtk/: help-overlay.ui
src/models/: bagit_git_profile.rs  bagit_repository.rs  mod.rs
src/ui/: clone-repository-page.ui  create-repository-page.ui  preferences.ui  repository-page.ui  window.ui
src/ui/widgets/: bagit-action-bar.ui  (+8 more)
src/utils/: action_type.rs  changed_file.rs  changed_folder.rs  clone_mode.rs  clone_page_profile_mode_type.rs  commit_view_profile_mode_type.rs  create_page_profile_mode_type.rs  db.rs  fetch_result.rs  file_tree.rs  git.rs  git_profile_utils.rs  gpg_utils.rs  migrations.rs  mod.rs  profile_mode.rs  repository_utils.rs  selected_repository.rs  settings.rs
src/widgets/: action_bar.rs  branches_dialog.rs  https_action_dialog.rs  mod.rs  passphrase_dialog.rs  profile_dialog.rs  repositories.rs  ssh_action_dialog.rs  ssh_passphrase_dialog.rs
(+18 files in other folders)
