[package]
name = "bagit-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
git2 = "0.17.2"
gtk = { version = "0.6.6", package = "gtk4", features= ["v4_10"] }
once_cell = "1.18.0"
regex = "1.8.4"

[dependencies.adw]
package = "libadwaita"
version = "0.3"
features = ["v1_3"]

once_cell = "1.18.0"
