[package]
name = "bagit-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "5.0.1"
email_address = "0.2.4"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
git2 = "0.17.2"
gtk = { version = "0.6.6", package = "gtk4", features= ["v4_10"] }
itertools = "0.11.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"
regex = "1.8.4"
sqlite = "0.31.0"
uuid = {version = "1.4.0", features = ["v4"]}
chrono = "0.4.26"
gpgme = "0.11.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-appender = "0.2.2"
walkdir = "2.3.3"

[dependencies.adw]
package = "libadwaita"
version = "0.3"
features = ["v1_3"]
